# cplusotus

./: CMakeLists.txt  README.md
.github/workflows/: cmake-workflow.yml  releaseMaker.yml  static.yml
bulk/: CMakeLists.txt
bulk/hdr/: bulkprinterconsole.h  bulkprinterfile.h  command.h  commandfabric.h  commandprocessor.h  ibulkprinter.h  ibulkpublisher.h  icommand.h  icommandstorage.h  listcommadstorage.h
bulk/src/: bulkprinterconsole.cpp  bulkprinterfile.cpp  command.cpp  commandfabric.cpp  commandprocessor.cpp  listcommadstorage.cpp  main.cpp
editor/: CMakeLists.txt
editor/forms/: mwnd.cpp  mwnd.h
editor/hdr/: documentstorage.h  gotuscircle.h  gotusdocument.h  gotuselementfabric.h  gotuspoint.h  igotuselement.h  internaltypes.h  irendersurface.h  isettingsstorage.h  qsettingsstorage.h  rendercontext.h  renderpanel.h  uuidgenerator.h
editor/src/: documentstorage.cpp  gotuscircle.cpp  gotusdocument.cpp  gotuselementfabric.cpp  gotuspoint.cpp  main.cpp  qsettingsstorage.cpp  rendercontext.cpp  renderpanel.cpp
hdr/: ipfilter.h  sfinaelesson.h
misc/: doxyfile.in  versioninfo.h.in
src/: ipfilter.cpp  main.cpp
subprojects/alloc/: CMakeLists.txt
subprojects/alloc/src/: main.cpp
subprojects/bulk/: CMakeLists.txt
subprojects/bulk/hdr/: ibulkprinter.h  listcommadstorage.h
subprojects/bulkm/: CMakeLists.txt
subprojects/bulkm/demoapp/: CMakeLists.txt
subprojects/bulkm/demoapp/src/: main.cpp
subprojects/bulkm/libasync/: CMakeLists.txt
subprojects/bulkm/libasync/hdr/: bulkprinterconsole.h  bulkprinterfile.h  bulkprocessor.h  command.h  commandfabric.h  commandprocessor.h  ibulkprinter.h  ibulkpublisher.h  icommand.h  icommandstorage.h  libasync.h  listcommadstorage.h
subprojects/bulkm/libasync/src/: bulkprinterconsole.cpp  bulkprinterfile.cpp  bulkprocessor.cpp  command.cpp  commandfabric.cpp  commandprocessor.cpp  libasync.cpp  listcommadstorage.cpp
subprojects/bulknet/: CMakeLists.txt
subprojects/bulknet/async_server/: CMakeLists.txt
subprojects/bulknet/async_server/hdr/: bulkserver.h  netcommandprocessor.h  tcpsession.h
subprojects/bulknet/async_server/src/: bulkserver.cpp  main.cpp  netcommandprocessor.cpp  tcpsession.cpp
subprojects/bulknet/libasync/: CMakeLists.txt
subprojects/bulknet/libasync/hdr/: bulknet_export.h  bulkprinterconsole.h  bulkprinterfile.h  bulkprocessor.h  command.h  commandfabric.h  commandprocessor.h  ibulkprinter.h  ibulkpublisher.h  icommand.h  icommandstorage.h  libasync.h  listcommadstorage.h
subprojects/bulknet/libasync/src/: bulkprinterconsole.cpp  bulkprinterfile.cpp  bulkprocessor.cpp  command.cpp  commandfabric.cpp  commandprocessor.cpp  libasync.cpp  listcommadstorage.cpp
subprojects/editor/forms/: mwnd.ui
subprojects/editor/hdr/: documentstorage.h  gotuscircle.h  gotusdocument.h  gotuspoint.h  isettingsstorage.h  qsettingsstorage.h  renderpanel.h
subprojects/editor/src/: gotuselementfabric.cpp
subprojects/matrix/: CMakeLists.txt
subprojects/matrix/hdr/: matrix.h  unlmatrix.h
subprojects/matrix/src/: main.cpp
tests/: test_data.tsv  test_ipfilter.cpp  test_ipfilter.h  test_version.cpp
